Update to grab hytale from maven Reworked updater Fixed crash related to death event Minor fixes